# opensaml-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md  clippy.toml  lefthook.yml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/open-saml/: Cargo.toml  README.md
crates/open-saml/src/: lib.rs
crates/open-saml/tests/: alias.rs
crates/opensaml/: Cargo.toml  README.md
crates/opensaml/examples/: sso.rs
crates/opensaml/src/: constants.rs  entity.rs  error.rs  flow.rs  idp.rs  lib.rs  logout.rs  sp.rs  template.rs  util.rs
crates/opensaml/src/crypto/: enc.rs  mod.rs  sign.rs  verify.rs
crates/opensaml/src/metadata/: mod.rs
crates/opensaml/tests/: conformance.rs  extractor_conformance.rs  flow_conformance.rs  index_conformance.rs  issues_conformance.rs
crates/rust-saml/: Cargo.toml  README.md
crates/rust-saml/src/: lib.rs
crates/rust-saml/tests/: alias.rs
crates/rustsaml/: Cargo.toml  README.md
crates/rustsaml/src/: lib.rs
crates/rustsaml/tests/: alias.rs
crates/samlify/: Cargo.toml  README.md
