[workspace]
resolver = "2"
members = [
    "crates/opensaml",
    "crates/open-saml",
    "crates/rust-saml",
    "crates/rustsaml",
    "crates/samlify",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/sebasxsala/opensaml-rs"
homepage = "https://github.com/sebasxsala/opensaml-rs"

[workspace.dependencies]
base64 = "0.22"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
quick-xml = "0.37"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["std", "parsing"] }
url = "2"
uuid = { version = "1", default-features = false, features = ["v4"] }
bergshamra = "0.4"
opensaml = { path = "crates/opensaml", version = "0.1.1" }
samlify = { path = "crates/samlify", version = "0.1.1" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
